@@ -1,6 +1,5 @@
 package com.epam.rd.autocode.assessment.appliances.service.impl;
 
-import com.epam.rd.autocode.assessment.appliances.dto.employee.EmployeeCreateRequest;
 import com.epam.rd.autocode.assessment.appliances.dto.employee.EmployeeProfileResponse;
 import com.epam.rd.autocode.assessment.appliances.dto.employee.EmployeeSummaryResponse;
 import com.epam.rd.autocode.assessment.appliances.dto.employee.EmployeeUpdateRequest;
@@ -12,12 +11,18 @@ import com.epam.rd.autocode.assessment.appliances.repository.EmployeeRepository;
 import com.epam.rd.autocode.assessment.appliances.repository.UserRepository;
 import com.epam.rd.autocode.assessment.appliances.service.EmployeeService;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.context.MessageSource;
+import org.springframework.context.i18n.LocaleContextHolder;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.util.Locale;
+
+@Slf4j
 @Service
 @RequiredArgsConstructor
 public class EmployeeServiceImpl implements EmployeeService {
@@ -27,16 +32,23 @@ public class EmployeeServiceImpl implements EmployeeService {
     private final UserRepository userRepository;
     private final EmployeeRepository employeeRepository;
 
+    private final MessageSource messageSource;
+
     @Override
-    @Transactional
+    @Transactional(readOnly = true)
     public EmployeeProfileResponse getEmployeeById(Long id) {
+        log.debug("Fetching employee with id '{}'", id);
         return EmployeeProfileResponse.fromEntity(employeeRepository.findById(id)
-                .orElseThrow(() -> new NotFoundException("Employee with id " + id + " not found")));
+                .orElseThrow(() -> {
+                    log.warn("Employee not found with id: '{}'", id);
+                    return new NotFoundException(messageSource.getMessage("error.employee.not.found", new Object[]{id}, getLocale()));
+                }));
     }
 
     @Override
     @Transactional(readOnly = true)
     public Page<EmployeeSummaryResponse> getAllEmployees(Pageable pageable) {
+        log.debug("Fetching all employees with pagination: pageNumber='{}', pageSize='{}'", pageable.getPageNumber(), pageable.getPageSize());
         return employeeRepository.findAll(pageable)
                 .map(EmployeeSummaryResponse::fromEntity);
     }
@@ -44,34 +56,46 @@ public class EmployeeServiceImpl implements EmployeeService {
     @Override
     @Transactional(readOnly = true)
     public Page<EmployeeSummaryResponse> getEmployeesPage(String keyword, Pageable pageable) {
+        log.debug("Searching employee page: keyword='{}', pageNumber={}", keyword, pageable.getPageNumber());
+
         Page<Employee> employees;
-
-        if (keyword != null && !keyword.trim().isEmpty()) {
-            employees = employeeRepository.searchEmployees(keyword, pageable);
-        } else {
+        if (keyword == null || keyword.trim().isBlank()) {
             employees = employeeRepository.findAll(pageable);
+        } else {
+            employees = employeeRepository.searchEmployees(keyword.trim(), pageable);
         }
-
         return employees.map(EmployeeSummaryResponse::fromEntity);
     }
 
     @Override
     @Transactional
     public void saveEmployee(EmployeeUpdateRequest request) {
+        boolean isNew = request.id() == null;
         Employee employee;
 
-        if (request.id() != null) {
+        if (!isNew) {
+            log.info("Updating employee with id: '{}'", request.id());
             employee = employeeRepository.findById(request.id())
-                    .orElseThrow(() -> new NotFoundException("Employee with id " + request.id() + " not found"));
+                    .orElseThrow(() -> {
+                        log.warn("Failed to update: Employee not found with id: '{}'", request.id());
+                        return new NotFoundException(messageSource.getMessage("error.employee.not.found", new Object[]{request.id()}, getLocale()));
+                    });
 
             if (!employee.getEmail().equals(request.email())) {
                 if (userRepository.findByEmail(request.email()).isPresent()) {
-                    throw new AlreadyExistsException("User with email " + request.email() + " already exists");
+                    log.warn("Failed to update: Employee email '{}' is already in use", request.email());
+                    throw new AlreadyExistsException(
+                            messageSource.getMessage("error.user.email.exists", new Object[]{request.email()}, getLocale())
+                    );
                 }
             }
         } else {
+            log.info("Creating employee vie admin panel with email: '{}'", request.email());
             if (userRepository.findByEmail(request.email()).isPresent()) {
-                throw new AlreadyExistsException("User with email " + request.email() + " already exists");
+                log.warn("Failed to update: Employee email '{}' is already in use", request.email());
+                throw new AlreadyExistsException(
+                        messageSource.getMessage("error.user.email.exists", new Object[]{request.email()}, getLocale())
+                );
             }
             employee = new Employee();
         }
@@ -91,5 +115,10 @@ public class EmployeeServiceImpl implements EmployeeService {
         }
 
         employeeRepository.save(employee);
+        log.info("Employee successfully {} with id: '{}', email: '{}', enabled: '{}'", isNew, employee.getId(), employee.getEmail(), employee.getEnabled());
+    }
+
+    private Locale getLocale() {
+        return LocaleContextHolder.getLocale();
     }
 }
